--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,6 @@
   --tg-theme-button-color: #2eaddc;
   --tg-theme-button-text-color: white;
 }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
